--- a/src/assets/scss/product.scss
+++ b/src/assets/scss/product.scss
@@ -31,7 +31,7 @@
 }
 
 .product_main {
-    height: 77.5%;
+    height: 1146px;
     width: 100%;
     display: flex;
     flex-wrap: wrap;
