--- a/src/assets/scss/project.scss
+++ b/src/assets/scss/project.scss
@@ -1,5 +1,5 @@
 .project{
-    height: 145%;
+    height: 1191px;
     width: 100%;
     overflow: hidden;
 }
