--- a/src/assets/scss/software.scss
+++ b/src/assets/scss/software.scss
@@ -1,5 +1,5 @@
 .software{
-    height: 145%;
+    height: 1273px;
     width: 100%;
     overflow: hidden;
 }
@@ -27,19 +27,19 @@
     background-attachment: fixed;
     background-size: cover;
     width: 100%;
-    height: 28%;
+    height: 25%;
 }
 
 .software_banner{
     background-color: #0182CA;
     width: 100%;
-    height: 4%;
+    height: 3%;
 }
 
 .software_info{
     width: 100%;
     //height: max-content;
-    height: 70%;
+    height: 72%;
 }
 
 .fit_software_list{
@@ -96,8 +96,8 @@
     width: 66%;
     display: block;
     float: left;
-    height: 93%;
-    margin-top:2%;
+    height: 98%;
+    margin-top:1%;
     box-shadow: 0px 0px 15px 0px #ADADAD;
 }
 
